<resources>
    <string name="app_name">Gift Pad</string>

    <string name="login">Log In</string>
    <string name="logged_in_as">Logged In As:</string>
    <string name="logout">Log Out</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="contacts">Contacts</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="home">Home</string>
    <string name="create_contact">Create Contact</string>
    <string name="select_contact">Select Contact</string>
    <string name="add_gift">Add Gift</string>
    <string name="create_event">Create Event</string>
    <string name="events">Events</string>
    <string name="gift">Gift</string>
    <string name="date">Date</string>
    <string name="reminder">Reminder</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="set_reminder">Set Reminders</string>
    <string name="one_day">1 Day</string>
    <string name="one_week">1 Week</string>
    <string name="one_month">1 Month</string>
    <string name="name">Name</string>
    <string name="action_notify_gift_event">dev.zidali.giftapp.action.GIFT_EVENT</string>
    <string name="view_contacts">Contacts</string>
    <string name="none">None</string>
    <string name="edit_event">Edit Event</string>
    <string name="finished">Finished</string>
    <string name="event_name">Event Name</string>
    <string name="when">When</string>
    <string name="when_colon">When:</string>
    <string name="reminder_colon">Reminder:</string>
    <string name="event">Event</string>
    <string name="delete_account">Delete Account</string>

    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <string name="holder_text">Holder Text</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_info">Info</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="grid_view">Grid View</string>
    <string name="list_view">List View</string>
    <string name="attention">Attention</string>
</resources>