<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_reminder"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <RadioButton
        android:id="@+id/none_radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none"
        />

    <CheckBox
        android:id="@+id/one_day_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_day"
        />

    <CheckBox
        android:id="@+id/one_week_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_week"
        />

    <CheckBox
        android:id="@+id/one_month_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_month"
        />

    <RelativeLayout
        android:id="@+id/cancel_create_layoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        >

        <View android:id="@+id/strut"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/strut"
            android:layout_alignParentStart="true"
            android:text="@string/cancel"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_button"
            android:background="@drawable/custom_button_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/strut"
            android:layout_alignParentEnd="true"
            android:text="@string/save"
            android:textColor="@color/white"
            />

    </RelativeLayout>


</LinearLayout>