<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/create_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_event"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/light_gray"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/input_name_container"
        >

        <AutoCompleteTextView
            android:id="@+id/contact_drop_down_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_contact"
            android:inputType="none"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/light_gray"
        app:hintTextColor="@color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/contact_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <EditText
            android:id="@+id/input_name"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event"
            android:inputType="textCapSentences"
            android:textColorHint="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_picker_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:text="@string/date"
        app:boxStrokeColor="@color/light_gray"
        app:hintTextColor="@color/darker_gray"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        >

        <AutoCompleteTextView
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:hint="@string/date"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminder_picker_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:boxStrokeColor="@color/light_gray"
        app:hintTextColor="@color/darker_gray"
        android:textColor="@color/black"
        android:layout_weight="0.5"
        android:maxLines="1"
        >

        <AutoCompleteTextView
            android:id="@+id/reminder_picker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/reminder"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/cancel_create_layoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        >

        <View android:id="@+id/strut"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_button"
        android:background="@drawable/custom_button_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/strut"
        android:layout_alignParentEnd="true"
        android:text="@string/create"
        android:textColor="@color/white"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/strut"
        android:layout_alignParentStart="true"
        android:text="@string/cancel"
        android:textColor="@color/black"
        />


    </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>