<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_contact_layout"
    android:padding="15dp"
    >

    <TextView
        android:id="@+id/create_contact_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/create_contact"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/create_contact_Title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/cancel_create_layoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name_container"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        >

        <View android:id="@+id/strut"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_button"
            android:background="@drawable/custom_button_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/strut"
            android:layout_alignParentEnd="true"
            android:text="@string/create"
            android:textColor="@color/white"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/strut"
            android:layout_alignParentStart="true"
            android:text="@string/cancel"
            android:textColor="@color/black"
            />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>