<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/add_gift_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_gift"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:endIconTint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/input_gift_container"
        >

        <AutoCompleteTextView
            android:id="@+id/contact_drop_down_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_contact"
            android:inputType="none"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_gift_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contact_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        >

    <EditText
        android:id="@+id/input_gift"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gift"
        android:inputType="textCapSentences"
        android:textColorHint="@color/white"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/cancel_create_layoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_gift_container"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        >

        <View android:id="@+id/strut"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_button"
            android:background="@drawable/custom_button_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/strut"
            android:layout_alignParentEnd="true"
            android:text="@string/create"
            android:textColor="@color/white"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/strut"
            android:layout_alignParentStart="true"
            android:text="@string/cancel"
            android:textColor="@color/black"
            />


    </RelativeLayout>

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>