<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View android:id="@+id/topDivider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomDivider"
        app:layout_constraintVertical_weight="1"
        android:layout_centerHorizontal="true" />

    <View android:id="@+id/bottomDivider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topDivider"
        app:layout_constraintVertical_weight="3"
        android:layout_centerHorizontal="true"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/topDivider"
        app:layout_constraintBottom_toBottomOf="@id/topDivider"
        app:layout_constraintLeft_toLeftOf="@id/topDivider"
        app:layout_constraintRight_toRightOf="@id/topDivider"
        >

            <EditText
                android:id="@+id/contact_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/holder_text"
                android:focusableInTouchMode="true"
                android:textColor="@color/white"
                android:inputType="none"
                android:background="@drawable/background_gradient"
                />

        <ImageView
            android:id="@+id/edit_button"
            android:src="@drawable/ic_baseline_edit_24"
            android:layout_margin="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topDivider"
        android:padding="15dp"
        android:hint="@string/event"
        android:id="@+id/event_container"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/date_reminder_layoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_container"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_picker_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:padding="5dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:maxLines="1"
            >

            <AutoCompleteTextView
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:hint="@string/date"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reminder_picker_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="0.5"
            android:maxLines="1">

            <AutoCompleteTextView
                android:id="@+id/reminder_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/reminder"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>